<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.braintreepayments.cardform.view.AccessibleSupportedCardTypesView
        android:id="@+id/supported_card_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bt_supported_card_types_description"/>

    <LinearLayout
        style="@style/bt_field_container">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bt_card_form_text_input"
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            app:startIconDrawable="@drawable/bt_ic_card"
            android:layout_marginTop="0dp"
            android:labelFor="@+id/bt_card_form_card_number">

            <com.braintreepayments.cardform.view.CardEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_card_number"
                android:hint="@string/bt_form_hint_card_number"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:baselineAligned="false"
        tools:ignore="RtlCompat"
        android:paddingEnd="0dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:labelFor="@+id/bt_card_form_expiration">

            <com.braintreepayments.cardform.view.ExpirationDateEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_expiration"
                android:hint="@string/bt_form_hint_expiration" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:labelFor="@+id/bt_card_form_cvv">

            <com.braintreepayments.cardform.view.CvvEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_cvv"
                android:hint="@string/bt_form_hint_cvv"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            app:startIconDrawable="@drawable/bt_ic_postal_code"
            android:labelFor="@+id/bt_card_form_postal_code">

            <com.braintreepayments.cardform.view.PostalCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_postal_code"
                android:hint="@string/bt_form_hint_postal_code"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            app:startIconDrawable="@drawable/bt_ic_cardholder_name"
            android:labelFor="@+id/bt_card_form_cardholder_name">

            <com.braintreepayments.cardform.view.CardholderNameEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_cardholder_name"
                android:hint="@string/bt_form_hint_cardholder_name"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:layout_weight=".7"
            android:layout_marginRight="5dp"
            android:labelFor="@+id/bt_card_form_country_code">

            <com.braintreepayments.cardform.view.CountryCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_country_code"
                android:hint="@string/bt_form_hint_country_code"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_weight=".3"
            app:startIconDrawable="@drawable/bt_ic_mobile_number"
            android:labelFor="@+id/bt_card_form_mobile_number">

            <com.braintreepayments.cardform.view.MobileNumberEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_mobile_number"
                android:hint="@string/bt_form_hint_mobile_number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        tools:ignore="RtlCompat"
        android:id="@+id/bt_card_form_mobile_number_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        style="@style/bt_field_container">

        <com.braintreepayments.cardform.view.InitialValueCheckBox
            android:id="@+id/bt_card_form_save_card_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/bt_save_card_checkbox_name"/>
    </LinearLayout>
</merge>