package com.braintreepayments.cardform.view;

import com.braintreepayments.cardform.R;
import com.braintreepayments.cardform.test.TestActivityTestCase;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.clearText;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.hasFocus;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.braintreepayments.cardform.test.Assertions.assertHintsAre;
import static com.braintreepayments.cardform.test.Assertions.theIconHintIs;
import static com.braintreepayments.cardform.test.Matchers.withHint;
import static com.braintreepayments.cardform.test.Matchers.withId;
import static com.braintreepayments.cardform.test.TestCardNumbers.AMEX;
import static com.braintreepayments.cardform.test.TestCardNumbers.INVALID_AMEX;
import static com.braintreepayments.cardform.test.TestCardNumbers.INVALID_VISA;
import static com.braintreepayments.cardform.test.TestCardNumbers.VISA;
import static com.braintreepayments.cardform.test.UITestHelper.rotateToLandscape;
import static com.braintreepayments.cardform.test.UITestHelper.rotateToPortrait;
import static org.hamcrest.Matchers.not;

public class CardFormActivityTest extends TestActivityTestCase {

    public void testCardNumberIsShownIfRequired() {
        setupCardForm(true, false, false, false);

        onView(withId(R.id.bt_card_form_card_number)).check(matches(isDisplayed()));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(not(isDisplayed())));
    }

    public void testExpirationIsShownIfRequired() {
        setupCardForm(false, true, false, false);

        onView(withId(R.id.bt_card_form_card_number)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(isDisplayed()));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(not(isDisplayed())));
    }

    public void testCvvIsShownIfRequired() {
        setupCardForm(false, false, true, false);

        onView(withId(R.id.bt_card_form_card_number)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(isDisplayed()));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(not(isDisplayed())));
    }

    public void testPostalCodeIsShownIfRequired() {
        setupCardForm(false, false, false, true);

        onView(withId(R.id.bt_card_form_card_number)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(not(isDisplayed())));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(isDisplayed()));
    }

    public void testHintsAreDisplayed() {
        setupCardForm(true, true, true, true);

        onView(withHint(R.string.bt_form_hint_card_number)).check(matches(isDisplayed()));
        onView(withHint(R.string.bt_form_hint_expiration)).check(matches(isDisplayed()));
        onView(withHint(R.string.bt_form_hint_cvv)).check(matches(isDisplayed()));
        onView(withHint(R.string.bt_form_hint_postal_code)).check(matches(isDisplayed()));
    }

    public void testCorrectCardHintsAreDisplayed() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_card_number))
                .check(theIconHintIs(mContext, R.drawable.bt_card_highlighted))
                .perform(typeText("4")).check(theIconHintIs(mContext, R.drawable.bt_visa))
                .perform(clearText())
                .perform(typeText("51")).check(theIconHintIs(mContext, R.drawable.bt_mastercard))
                .perform(clearText())
                .perform(typeText("37")).check(theIconHintIs(mContext, R.drawable.bt_amex))
                .perform(clearText())
                .perform(typeText("35")).check(theIconHintIs(mContext, R.drawable.bt_jcb))
                .perform(clearText())
                .perform(typeText("5018")).check(theIconHintIs(mContext, R.drawable.bt_maestro))
                .perform(clearText())
                .perform(typeText("1234"))
                .check(theIconHintIs(mContext, R.drawable.bt_card_highlighted));
    }

    public void testCvvHintsShowAndDisappearOnClick() throws InterruptedException {
        setupCardForm();

        onView(withId(R.id.bt_card_form_cvv)).check(assertHintsAre(null, null, null, null))
                .perform(click())
                .check(theIconHintIs(mContext, R.drawable.bt_cvv_highlighted))
                .perform(typeText("123"));
        onView(withId(R.id.bt_card_form_postal_code)).perform(typeText("12345"));
        onView(withId(R.id.bt_card_form_cvv))
                .check(assertHintsAre(null, null, null, null)); // check that the hint is gone after defocusing
    }

    public void testCardNumberAdvancesToExpirationWhenCompleteAndValid() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_card_number)).perform(typeText(VISA));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(hasFocus()));

        onView(withId(R.id.bt_card_form_card_number)).perform(clearText(), typeText(AMEX));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(hasFocus()));
    }

    public void testCardNumberDoesNotAdvanceWhenCompleteAndInvalid() {
        setupCardForm();

        CardEditText cardEditText =
                (CardEditText) mActivity.findViewById(R.id.bt_card_form_card_number);
        onView(withId(R.id.bt_card_form_card_number)).perform(typeText(INVALID_VISA));
        assertTrue(cardEditText.isError());
        onView(withId(R.id.bt_card_form_card_number)).check(matches(hasFocus()));

        onView(withId(R.id.bt_card_form_card_number)).perform(clearText(), typeText(INVALID_AMEX));
        assertTrue(cardEditText.isError());
        onView(withId(R.id.bt_card_form_card_number)).check(matches(hasFocus()));
    }

    public void testExpirationAdvancesToCvvWhenComplete() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_expiration)).perform(typeText("0616"));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(hasFocus()));

        onView(withId(R.id.bt_card_form_expiration)).perform(clearText(), typeText("062019"));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(withText("062019")));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(withText("")));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(hasFocus()));
    }

    public void testExpirationDoesNotAdvanceWhenCompleteAndInvalid() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_expiration)).perform(typeText("0812"));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(hasFocus()));

        onView(withId(R.id.bt_card_form_expiration)).perform(clearText(), typeText("082012"));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(withText("082012")));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(hasFocus()));
    }

    public void testCvvAdvancesToPostalWhenComplete() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_card_number)).perform(typeText(VISA));
        onView(withId(R.id.bt_card_form_cvv)).perform(typeText("123"));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(hasFocus()));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(withText("123")));

        onView(withId(R.id.bt_card_form_card_number)).perform(clearText(), typeText(AMEX));
        onView(withId(R.id.bt_card_form_cvv)).perform(clearText(), typeText("1234"));
        onView(withId(R.id.bt_card_form_postal_code)).check(matches(hasFocus()));
        onView(withId(R.id.bt_card_form_cvv)).check(matches(withText("1234")));
    }

    public void testAdvancingDoesNotCrashWhenThereIsNotANextField() {
        setupCardForm(true, true, false, false);

        onView(withId(R.id.bt_card_form_expiration)).perform(typeText("0615"));
        onView(withId(R.id.bt_card_form_expiration)).check(matches(withText("0615")));
    }

    public void testValuesAreRestored() {
        try {
            setupCardForm();

            onView(withId(R.id.bt_card_form_card_number)).perform(typeText(VISA));
            onView(withId(R.id.bt_card_form_expiration)).perform(typeText("1220"));
            onView(withId(R.id.bt_card_form_cvv)).perform(typeText("123"));
            onView(withId(R.id.bt_card_form_postal_code)).perform(typeText("12345"));

            rotateToLandscape(this);

            onView(withId(R.id.bt_card_form_card_number)).check(matches(withText(VISA)));
            onView(withId(R.id.bt_card_form_expiration)).check(matches(withText("1220")));
            onView(withId(R.id.bt_card_form_cvv)).check(matches(withText("123")));
            onView(withId(R.id.bt_card_form_postal_code)).check(matches(withText("12345")));
        } finally {
            rotateToPortrait(this);
        }
    }

    public void testMarksCardNumberAsErrorWhenFocusChangesAndCardNumberFailsValidation() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_card_number)).perform(typeText("4"));
        ErrorEditText cardEditText = (ErrorEditText) mActivity.findViewById(R.id.bt_card_form_card_number);
        assertTrue(cardEditText.isFocused());
        assertFalse(cardEditText.isError());

        onView(withId(R.id.bt_card_form_expiration)).perform(click());
        assertFalse(cardEditText.isFocused());
        assertTrue(cardEditText.isError());
    }

    public void testMarksExpirationAsErrorWhenFocusChangesAndExpirationFailsValidation() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_expiration)).perform(typeText("1"));
        ErrorEditText expirationEditText = (ErrorEditText) mActivity.findViewById(R.id.bt_card_form_expiration);
        assertTrue(expirationEditText.isFocused());
        assertFalse(expirationEditText.isError());

        onView(withId(R.id.bt_card_form_card_number)).perform(click());
        assertFalse(expirationEditText.isFocused());
        assertTrue(expirationEditText.isError());
    }

    public void testMarksCvvAsErrorWhenFocusChangesAndCvvNotProperLength() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_cvv)).perform(typeText("1"));
        ErrorEditText cvvEditText = (ErrorEditText) mActivity.findViewById(R.id.bt_card_form_cvv);
        assertTrue(cvvEditText.isFocused());
        assertFalse(cvvEditText.isError());

        onView(withId(R.id.bt_card_form_card_number)).perform(click());
        assertFalse(cvvEditText.isFocused());
        assertTrue(cvvEditText.isError());
    }

    public void testMarksCvvAsErrorWhenCardChangesToAmex() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_cvv)).perform(typeText("111"));
        onView(withId(R.id.bt_card_form_card_number)).perform(click());
        ErrorEditText cvvEditText = (ErrorEditText) mActivity.findViewById(R.id.bt_card_form_cvv);
        assertFalse(cvvEditText.isFocused());
        assertFalse(cvvEditText.isError());

        onView(withId(R.id.bt_card_form_card_number)).perform(typeText(AMEX));
        onView(withId(R.id.bt_card_form_cvv)).perform(click());
        onView(withId(R.id.bt_card_form_card_number)).perform(click());
        assertFalse(cvvEditText.isFocused());
        assertTrue(cvvEditText.isError());
    }

    public void testMarksPostalCodeWhenFocusChangesAndPostalCodeBlank() {
        setupCardForm();

        onView(withId(R.id.bt_card_form_postal_code)).perform(click());
        ErrorEditText postalEditText = (ErrorEditText) mActivity.findViewById(R.id.bt_card_form_postal_code);
        assertTrue(postalEditText.isFocused());
        assertFalse(postalEditText.isError());

        onView(withId(R.id.bt_card_form_cvv)).perform(click());
        assertFalse(postalEditText.isFocused());
        assertTrue(postalEditText.isError());
    }

    public void testDoesNotCrashWhenNoListenersAreSet() {
        setupCardForm();
        onView(withId(R.id.bt_card_form_card_number)).perform(click(), typeText(VISA));
    }
}
